--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/com/hust/game/GUI.java=UTF-8
 encoding//src/com/hust/game/Game.java=UTF-8
 encoding/README.md=UTF-8
